<resources>
    <string name="app_name">Mon comparateur</string>
    <string name="peas_and_carrots">Petits pois et carottes</string>
    <string name="brand_placeholder">Cassegrain</string>
    <string name="barcode">Code barre</string>
    <string name="quantity">Quantité</string>
    <string name="additives">Additifs</string>
    <string name="sold_in">Vendu en</string>
    <string name="ingredients">Ingrédients</string>
    <string name="allergenes">Substances allergènes</string>
    <string name="nothing_scanned_yet">Vous n\'avez encore rien scanné !</string>
    <string name="click_to_begin">Cliquez sur le bouton ci-dessous pour commencer</string>
    <string name="scan_a_product">Scanner un produit</string>
    <string name="nutriscore_value">Nutriscore: %1$s</string>
    <string name="calories_per_portion">%1$d kCal/part</string>
    <string name="nutrition_100_benchmarks">Repères nutritionnels pour 100g</string>
    <string name="menu_barcode">Mes produits</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_additives">Aucun</string>
    <string name="no_allergenes">Aucune</string>
    <string name="sold_nowhere">Nulle part</string>
    <string name="of_fat">%1$s%2$s de matières grasses / lipides</string>
    <string name="of_fat_acids">%1$s%2$s d\'acides gras saturés</string>
    <string name="of_sugar">%1$s%2$s de sucre</string>
    <string name="of_salt">%1$s%2$s de sel</string>
    <string name="low_quantity">En faible quantité</string>
    <string name="medium_quantity">En quantité modérée</string>
    <string name="high_quantity">En quantité élevée</string>
    <string name="par_part">Par part</string>
    <string name="label_energy">Énergie</string>
    <string name="label_fat">Matières grasses</string>
    <string name="label_saturated_fat">Dont acides gras saturés</string>
    <string name="label_glucids">Glucides</string>
    <string name="label_sugar">Dont sucres</string>
    <string name="label_fibers">Fibres</string>
    <string name="label_proteins">Protéines</string>
    <string name="label_salt">Sel</string>
    <string name="label_sodium">Sodium</string>
    <string name="for_100g">Pour 100g</string>
    <string name="value_unit">%1$s%2$s</string>
    <string name="not_given">Non renseigné</string>
    <string name="product_detail">Détails du produit</string>
    <string name="card">Fiche</string>
    <string name="nutrition">Nutrition</string>
    <string name="nutri_infos">Infos nutritionnelles</string>
    <string name="loading">Chargement...</string>
    <string name="error_occurred">Une erreur est survenue lors de la requête. Réessayer?</string>
</resources>
