<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fiche"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/item_picture"
        android:layout_width="match_parent"
        android:layout_height="@dimen/illustration_height"
        android:scaleType="centerCrop"
        android:src="@drawable/product_backround"
        app:layout_constraintLeft_toLeftOf="@+id/fiche"
        app:layout_constraintRight_toRightOf="@+id/fiche"
        app:layout_constraintTop_toTopOf="@+id/fiche" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margin_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="15dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margin_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="15dp" />

    <ImageView
        android:id="@+id/nutri_score"
        android:layout_width="@dimen/nutri_score_width"
        android:layout_height="@dimen/nutri_score_height"
        android:scaleType="centerCrop"
        android:src="@drawable/nutri_score_a"
        app:layout_constraintBottom_toBottomOf="@+id/product_brand"
        app:layout_constraintRight_toRightOf="@id/margin_end"
        app:layout_constraintTop_toBottomOf="@id/item_picture" />

    <TextView
        android:id="@+id/product_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:text="@string/peas_and_carrots"
        android:textColor="@color/black"
        android:textSize="@dimen/title_size"
        app:layout_constraintEnd_toStartOf="@id/nutri_score"
        app:layout_constraintStart_toStartOf="@id/margin_start"
        app:layout_constraintTop_toBottomOf="@id/item_picture" />

    <TextView
        android:id="@+id/product_brand"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/brand_placeholder"
        android:textColor="@color/black"
        android:textSize="@dimen/brand_size"
        app:layout_constraintLeft_toLeftOf="@id/margin_start"
        app:layout_constraintTop_toBottomOf="@id/product_title" />

    <TextView
        android:id="@+id/barcode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/barcode"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="@id/margin_end"
        app:layout_constraintStart_toStartOf="@id/margin_start"
        app:layout_constraintTop_toBottomOf="@id/product_brand" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="@id/margin_end"
        app:layout_constraintStart_toStartOf="@id/margin_start"
        app:layout_constraintTop_toBottomOf="@id/barcode" />

    <TextView
        android:id="@+id/sold_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sold_in"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="@id/margin_end"
        app:layout_constraintStart_toStartOf="@id/margin_start"
        app:layout_constraintTop_toBottomOf="@id/quantity" />

    <TextView
        android:id="@+id/ingredients"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ingredients"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="@id/margin_end"
        app:layout_constraintStart_toStartOf="@id/margin_start"
        app:layout_constraintTop_toBottomOf="@id/sold_in" />

    <TextView
        android:id="@+id/allergenes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/allergenes"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="@id/margin_end"
        app:layout_constraintStart_toStartOf="@id/margin_start"
        app:layout_constraintTop_toBottomOf="@id/ingredients" />

    <TextView
        android:id="@+id/label_additives"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/additives"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="@id/margin_end"
        app:layout_constraintStart_toStartOf="@id/margin_start"
        app:layout_constraintTop_toBottomOf="@id/allergenes" />
</androidx.constraintlayout.widget.ConstraintLayout>