<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/empty_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/empty_list_plate"
        android:layout_width="@dimen/empty_plate_width"
        android:layout_height="@dimen/empty_plate_height"
        android:layout_marginBottom="50dp"
        android:src="@drawable/ic_empty_saved" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/nothing_scanned_yet"
        android:textSize="@dimen/no_scan_yet_size"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/click_to_begin"
        android:textSize="@dimen/footer_font_size" />

    <Button
        android:id="@+id/scan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/scan_button"
        android:text="@string/scan_a_product"
        android:textAllCaps="true"
        android:textColor="@color/white" />

</androidx.appcompat.widget.LinearLayoutCompat>